Fix downward scroll on mobile devices leading to page refresh

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,7 @@ body,
     font-family: 'Exo 2', sans-serif;
     width: 100%;
     height: 100%;
+    overscroll-behavior: none !important;
 }
 
 p,
